package structual.composite.BTB4;

public abstract class MonHoc {
    public abstract String getTenMonHoc();
    public abstract int getTinChi();
    public abstract double getHocPhi();
}
